# 4C

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  protein_visualization_prototype.ipynb  pyproject.toml  requirements.txt  run_docker.ps1  run_docker.sh
.github/workflows/: ci-docker-publish.yml  smoke-test.yml  verify-ghcr-pull.yml
.streamlit/: config.toml
docs/: docker_local_setup.md
pages/: 1_首页.py  2_结构可视化.py  3_使用说明.py  4_多构象比较.py  4_结果与导出.py  5_分析历史.py
src/protein_visualizer/: __init__.py  models.py  sample_data.py
src/protein_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/protein_visualizer/config/: settings.py
src/protein_visualizer/services/: comparison.py  energy.py  explainer.py  hotspot.py  logging_utils.py  parsers.py  pdf_export.py  pocket.py  reporting.py  session_state.py  viewer.py
src/protein_visualizer/ui/: layout.py
tests/: conftest.py  test_energy.py  test_parsers.py
